<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RomManager</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="android_version">Android Version:</string>
    <string name="xml_update">Update/Reload xml files</string>
    <string name="rom_detailed_by">By</string>
    <string name="download_whole_rom_button">Download whole rom</string>
    <string name="download_incremental_update_button">Download incremental update</string>
    <string name="lcd_type">LCD type:</string>
    <string name="title_activity_about_screen">AboutScreen</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="about_header">About RomManager</string>
    <string name="about_text">This application allows you to download ROM\'s and ROM\'s updates for Samsung Galaxy Ace 2.</string>
    <string name="developers_header">Developers</string>
    <string name="developers">jereksel</string>
    <string name="thanks_header">Thanks</string>
    <string name="thanks">Ravi Tamada for XML parser \nAhamed Ishak for Navigation Drawer\nkamranzafar for jtar library</string>
    <string name="changelog">Changelog</string>
    <string name="CMChangelog"><b>25/04</b>\n-CM sources update\n-Fix wrong voltage showing\nNovaThor Settings v1.3
    \n<b>22/04 :</b>\n-CM sources update\n-Cleaned kernel\n-Fixed Mali autoboost problems\n-NovaThor Settings v1.2\n-Google location service fixed (maybe)
    </string>

</resources>
