<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jereksel.rommanager.AboutScreen">

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:text="@string/about_header"
        android:id="@+id/about_header_id"
        style="?android:attr/listSeparatorTextViewStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text"
        android:id="@+id/description"
        android:layout_below="@+id/about_header_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10px" />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/developers_header"
        android:layout_below="@+id/description"
        style="?android:attr/listSeparatorTextViewStyle"
        android:text="@string/developers_header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developers"
        android:id="@+id/developers"
        android:layout_below="@+id/developers_header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10px"
         />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/thanks"
        android:layout_below="@+id/developers"
        style="?android:attr/listSeparatorTextViewStyle"
        android:text="@string/thanks_header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks"
        android:id="@+id/credits_thanks"
        android:layout_below="@+id/thanks"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10px" />


</RelativeLayout>
